deployment/istio/virtual_service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-path
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: "/api-service/"
      rewrite:
        uri: "/"
      timeout: 2s
      route:
        - destination:
            host: api-service.default.svc.cluster.local
            port:
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowCredentials: true
        allowHeaders:
          - "*"
      retries:
        attempts: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: upstream-service
  namespace: istio-system
spec:
  hosts:
    - upstream-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: upstream-service.default.svc.cluster.local
            port:
              number: 80
      retries:
        attempts: 0
